# airflow3_dbt_setup

./: docker-compose.yml  generate_fake_data.py  pyproject.toml
